pysysml2/grammar/distpy/old2/SysML2Parser.py
# Generated from SysML2.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SysML2Parser ( Parser ):

    grammarFileName = "SysML2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "','", "':'", "'='", 
                     "'*'", "'about'", "'actor'", "'attribute'", "'case'", 
                     "'comment'", "'def'", "'doc'", "'import'", "'item'", 
                     "'objective'", "'package'", "'part'", "'port'", "'redefines'", 
                     "'ref'", "'specializes'", "'subject'", "'subsets'", 
                     "'use'", "'::'", "':>>'", "':>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "KW_ABOUT", "KW_ACTOR", "KW_ATTRIBUTE", "KW_CASE", 
                      "KW_COMMENT", "KW_DEF", "KW_DOC", "KW_IMPORT", "KW_ITEM", 
                      "KW_OBJECTIVE", "KW_PACKAGE", "KW_PART", "KW_PORT", 
                      "KW_REDEFINES", "KW_REF", "KW_SPECIALIZES", "KW_SUBJECT", 
                      "KW_SUBSETS", "KW_USE", "KW_SYM_FQN", "KW_SYM_REDEFINES", 
                      "KW_SYM_SUBSETS", "CONSTANT", "TYPE", "ID", "INTEGER", 
                      "REAL", "BOOL", "STRING", "MULTIPLICITY", "NULL", 
                      "WS", "NOTE", "COMMENT_LONG" ]

    RULE_model = 0
    RULE_element = 1
    RULE_namespace = 2
    RULE_sysml2_package = 3
    RULE_part_blk = 4
    RULE_part = 5
    RULE_part_def = 6
    RULE_part_def_specializes = 7
    RULE_port = 8
    RULE_port_def = 9
    RULE_port_blk = 10
    RULE_use_case_blk = 11
    RULE_use_case_def = 12
    RULE_part_objective_blk = 13
    RULE_objective_def = 14
    RULE_feature = 15
    RULE_feature_attribute_def = 16
    RULE_feature_attribute_redefines = 17
    RULE_feature_part_specializes = 18
    RULE_feature_part_specializes_subsets = 19
    RULE_feature_item_def = 20
    RULE_feature_item_ref = 21
    RULE_feature_actor_specializes = 22
    RULE_comment = 23
    RULE_comment_unnamed = 24
    RULE_comment_named = 25
    RULE_comment_named_about = 26
    RULE_doc = 27
    RULE_doc_unnamed = 28
    RULE_doc_named = 29
    RULE_statement = 30
    RULE_import_package = 31

    ruleNames =  [ "model", "element", "namespace", "sysml2_package", "part_blk", 
                   "part", "part_def", "part_def_specializes", "port", "port_def", 
                   "port_blk", "use_case_blk", "use_case_def", "part_objective_blk", 
                   "objective_def", "feature", "feature_attribute_def", 
                   "feature_attribute_redefines", "feature_part_specializes", 
                   "feature_part_specializes_subsets", "feature_item_def", 
                   "feature_item_ref", "feature_actor_specializes", "comment", 
                   "comment_unnamed", "comment_named", "comment_named_about", 
                   "doc", "doc_unnamed", "doc_named", "statement", "import_package" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    KW_ABOUT=8
    KW_ACTOR=9
    KW_ATTRIBUTE=10
    KW_CASE=11
    KW_COMMENT=12
    KW_DEF=13
    KW_DOC=14
    KW_IMPORT=15
    KW_ITEM=16
    KW_OBJECTIVE=17
    KW_PACKAGE=18
    KW_PART=19
    KW_PORT=20
    KW_REDEFINES=21
    KW_REF=22
    KW_SPECIALIZES=23
    KW_SUBJECT=24
    KW_SUBSETS=25
    KW_USE=26
    KW_SYM_FQN=27
    KW_SYM_REDEFINES=28
    KW_SYM_SUBSETS=29
    CONSTANT=30
    TYPE=31
    ID=32
    INTEGER=33
    REAL=34
    BOOL=35
    STRING=36
    MULTIPLICITY=37
    NULL=38
    WS=39
    NOTE=40
    COMMENT_LONG=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SysML2Parser.EOF, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.ElementContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.ElementContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = SysML2Parser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199096514048) != 0):
                self.state = 64
                self.element()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(SysML2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self):
            return self.getTypedRuleContext(SysML2Parser.NamespaceContext,0)


        def feature(self):
            return self.getTypedRuleContext(SysML2Parser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def statement(self):
            return self.getTypedRuleContext(SysML2Parser.StatementContext,0)


        def port(self):
            return self.getTypedRuleContext(SysML2Parser.PortContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = SysML2Parser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_element)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.namespace()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.feature()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.comment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.doc()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.port()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sysml2_package(self):
            return self.getTypedRuleContext(SysML2Parser.Sysml2_packageContext,0)


        def part(self):
            return self.getTypedRuleContext(SysML2Parser.PartContext,0)


        def use_case_def(self):
            return self.getTypedRuleContext(SysML2Parser.Use_case_defContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def port(self):
            return self.getTypedRuleContext(SysML2Parser.PortContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace" ):
                return visitor.visitNamespace(self)
            else:
                return visitor.visitChildren(self)




    def namespace(self):

        localctx = SysML2Parser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespace)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.sysml2_package()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.part()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.use_case_def()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.comment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.doc()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.port()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sysml2_packageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PACKAGE(self):
            return self.getToken(SysML2Parser.KW_PACKAGE, 0)

        def ID(self):
            return self.getToken(SysML2Parser.ID, 0)

        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.NamespaceContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.NamespaceContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_sysml2_package

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSysml2_package" ):
                listener.enterSysml2_package(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSysml2_package" ):
                listener.exitSysml2_package(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSysml2_package" ):
                return visitor.visitSysml2_package(self)
            else:
                return visitor.visitChildren(self)




    def sysml2_package(self):

        localctx = SysML2Parser.Sysml2_packageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sysml2_package)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(SysML2Parser.KW_PACKAGE)
            self.state = 89
            self.match(SysML2Parser.ID)
            self.state = 90
            self.match(SysML2Parser.T__0)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199096481280) != 0):
                self.state = 91
                self.namespace()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(SysML2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_blkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self):
            return self.getTypedRuleContext(SysML2Parser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def part_def_specializes(self):
            return self.getTypedRuleContext(SysML2Parser.Part_def_specializesContext,0)


        def port(self):
            return self.getTypedRuleContext(SysML2Parser.PortContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part_blk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart_blk" ):
                listener.enterPart_blk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart_blk" ):
                listener.exitPart_blk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_blk" ):
                return visitor.visitPart_blk(self)
            else:
                return visitor.visitChildren(self)




    def part_blk(self):

        localctx = SysML2Parser.Part_blkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_part_blk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 99
                self.feature()
                pass

            elif la_ == 2:
                self.state = 100
                self.comment()
                pass

            elif la_ == 3:
                self.state = 101
                self.doc()
                pass

            elif la_ == 4:
                self.state = 102
                self.part_def_specializes()
                pass

            elif la_ == 5:
                self.state = 103
                self.port()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def part_def(self):
            return self.getTypedRuleContext(SysML2Parser.Part_defContext,0)


        def part_def_specializes(self):
            return self.getTypedRuleContext(SysML2Parser.Part_def_specializesContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart" ):
                listener.enterPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart" ):
                listener.exitPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart" ):
                return visitor.visitPart(self)
            else:
                return visitor.visitChildren(self)




    def part(self):

        localctx = SysML2Parser.PartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 106
                self.part_def()
                pass

            elif la_ == 2:
                self.state = 107
                self.part_def_specializes()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PART(self):
            return self.getToken(SysML2Parser.KW_PART, 0)

        def KW_DEF(self):
            return self.getToken(SysML2Parser.KW_DEF, 0)

        def ID(self):
            return self.getToken(SysML2Parser.ID, 0)

        def part_blk(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.Part_blkContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.Part_blkContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart_def" ):
                listener.enterPart_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart_def" ):
                listener.exitPart_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_def" ):
                return visitor.visitPart_def(self)
            else:
                return visitor.visitChildren(self)




    def part_def(self):

        localctx = SysML2Parser.Part_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_part_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 110
                self.match(SysML2Parser.KW_PART)
                self.state = 111
                self.match(SysML2Parser.KW_DEF)
                self.state = 112
                self.match(SysML2Parser.ID)
                self.state = 113
                self.match(SysML2Parser.T__0)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199029110272) != 0):
                    self.state = 114
                    self.part_blk()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.match(SysML2Parser.T__1)
                pass

            elif la_ == 2:
                self.state = 121
                self.match(SysML2Parser.KW_PART)
                self.state = 122
                self.match(SysML2Parser.KW_DEF)
                self.state = 123
                self.match(SysML2Parser.ID)
                self.state = 124
                self.match(SysML2Parser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_def_specializesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PART(self):
            return self.getToken(SysML2Parser.KW_PART, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SysML2Parser.ID)
            else:
                return self.getToken(SysML2Parser.ID, i)

        def KW_SPECIALIZES(self):
            return self.getToken(SysML2Parser.KW_SPECIALIZES, 0)

        def KW_SYM_SUBSETS(self):
            return self.getToken(SysML2Parser.KW_SYM_SUBSETS, 0)

        def KW_DEF(self):
            return self.getToken(SysML2Parser.KW_DEF, 0)

        def part_blk(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.Part_blkContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.Part_blkContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part_def_specializes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart_def_specializes" ):
                listener.enterPart_def_specializes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart_def_specializes" ):
                listener.exitPart_def_specializes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_def_specializes" ):
                return visitor.visitPart_def_specializes(self)
            else:
                return visitor.visitChildren(self)




    def part_def_specializes(self):

        localctx = SysML2Parser.Part_def_specializesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_part_def_specializes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SysML2Parser.KW_PART)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 128
                self.match(SysML2Parser.KW_DEF)


            self.state = 131
            self.match(SysML2Parser.ID)
            self.state = 132
            _la = self._input.LA(1)
            if not(_la==23 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 133
            self.match(SysML2Parser.ID)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 134
                    self.match(SysML2Parser.T__3)
                    self.state = 135
                    self.match(SysML2Parser.ID) 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 141
                self.match(SysML2Parser.T__0)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199029110272) != 0):
                    self.state = 142
                    self.part_blk()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 148
                self.match(SysML2Parser.T__1)
                pass
            elif token in [3]:
                self.state = 149
                self.match(SysML2Parser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def port_def(self):
            return self.getTypedRuleContext(SysML2Parser.Port_defContext,0)


        def port_blk(self):
            return self.getTypedRuleContext(SysML2Parser.Port_blkContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPort" ):
                return visitor.visitPort(self)
            else:
                return visitor.visitChildren(self)




    def port(self):

        localctx = SysML2Parser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.state = 152
                self.port_def()
                pass
            elif token in [9, 10, 12, 14, 16, 19, 22, 41]:
                self.state = 153
                self.port_blk()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PORT(self):
            return self.getToken(SysML2Parser.KW_PORT, 0)

        def ID(self):
            return self.getToken(SysML2Parser.ID, 0)

        def port_blk(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.Port_blkContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.Port_blkContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_port_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_def" ):
                listener.enterPort_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_def" ):
                listener.exitPort_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPort_def" ):
                return visitor.visitPort_def(self)
            else:
                return visitor.visitChildren(self)




    def port_def(self):

        localctx = SysML2Parser.Port_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_port_def)
        self._la = 0 # Token type
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(SysML2Parser.KW_PORT)
                self.state = 157
                self.match(SysML2Parser.ID)
                self.state = 158
                self.match(SysML2Parser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(SysML2Parser.KW_PORT)
                self.state = 160
                self.match(SysML2Parser.ID)
                self.state = 161
                self.match(SysML2Parser.T__0)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199028061696) != 0):
                    self.state = 162
                    self.port_blk()
                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 168
                self.match(SysML2Parser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_blkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self):
            return self.getTypedRuleContext(SysML2Parser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_port_blk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_blk" ):
                listener.enterPort_blk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_blk" ):
                listener.exitPort_blk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPort_blk" ):
                return visitor.visitPort_blk(self)
            else:
                return visitor.visitChildren(self)




    def port_blk(self):

        localctx = SysML2Parser.Port_blkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_port_blk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10, 16, 19, 22]:
                self.state = 171
                self.feature()
                pass
            elif token in [12, 41]:
                self.state = 172
                self.comment()
                pass
            elif token in [14]:
                self.state = 173
                self.doc()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_case_blkContext(ParserRuleContext):
        __slots__ = 'parser'
